# zp_cpp

./: .clang-format  .gitignore  LICENSE
.cursor/commands/: test.md
.cursor/rules/: coding-rules.mdc  run-ci.mdc
.github/workflows/: ci.yml  release.yml
docs/: CODING_RULES.md
scripts/: build-debug.sh  build-release.sh  ci.sh  format-check.sh  format.sh  package.sh  release.sh  test-debug.sh  test-release.sh
zp_cpp/: CMakeLists.txt  CMakePresets.json
zp_cpp/include/zp_cpp/: buff.hpp  cli.hpp  core.hpp  dbg.hpp  events.hpp  files.hpp  gpu.hpp  hash.hpp  log.hpp  math.hpp  net.hpp  platform.hpp  time.hpp  ui.hpp  uuid.hpp
zp_cpp/include/zp_cpp/gpu/: shader_hex.hpp
zp_cpp/src/: cli.cpp  files.cpp  gpu-Blas.cpp  gpu-CmdBuffPool.cpp  gpu-DeviceBuff4.cpp  gpu-DeviceLocalImage.cpp  gpu-DeviceLocalImageArray.cpp  gpu-HiddenDeviceLocalBuff.cpp  gpu-HostBuff2.cpp  gpu-HostVisibleImage.cpp  gpu-Sampler.cpp  gpu-StagedDeviceBuff4.cpp  gpu-Tlas.cpp  gpu-descriptors.cpp  gpu-init.cpp  gpu-passes-as_work.cpp  gpu-passes-compute.cpp  gpu-passes-graphics_pass.cpp  gpu-passes-rt_pass.cpp  gpu-passes-skin_work.cpp  gpu-passes-tex_work.cpp  gpu-shortcuts.cpp  gpu-util.cpp  gpu.cpp  hash.cpp  log.cpp  math-splines.cpp  math.cpp  net.cpp  platform.cpp  time.cpp  ui.cpp  uuid.cpp
zp_cpp/src/gpu/shaders/: bake_frag.slang  bake_rchit.slang  bake_rgen.slang  bake_rmiss.slang  bake_vert.slang  comp_skin_nrms.slang  comp_skin_verts.slang  comp_skybox.slang  compositor_frag.slang  compositor_vert.slang  random.slang  rt_common.slang  shape_frag.slang  shape_vert.slang  ui_frag_2.slang  ui_vert_2.slang
zp_cpp/tests/: cmn.hpp
zp_cpp/tests/integration/: buffer_integration.t.cpp  cli_integration.t.cpp  end_to_end.t.cpp  file_integration.t.cpp  hash_integration.t.cpp  time_integration.t.cpp
zp_cpp/tests/unit/: buffer.t.cpp  cli.t.cpp  core.t.cpp  events.t.cpp  files.t.cpp  gpu_util.t.cpp  hash.t.cpp  log.t.cpp  math_camera.t.cpp  math_matrix.t.cpp  math_misc.t.cpp  math_quat.t.cpp  math_splines.t.cpp  math_transform.t.cpp  math_vec.t.cpp  net.t.cpp  platform.t.cpp  span.t.cpp  ui.t.cpp  uuid.t.cpp
